fixing layout issues

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -7,37 +7,41 @@
   overflow: hidden;
   margin: 0 100px 150px 100px;
 }
-    .content-about {
-      margin: 2rem;
 
-      -webkit-box-flex: 1;
-      -webkit-flex: 1;
-              flex: 1;
-      padding: 70px 50px;
-    }
-    .about-title {
-        font-size: 3em;
-        text-align: center;
-        padding: 50px 0 50px 0;
-        color:#444649;
-        text-decoration: underline;
-      }
-    .about-content {
-      font-size: 20px;
-      padding: 0 20px 0 20px;
-      text-align: justify;
-      line-height: 26px;
-      margin-right: 10px;
-       
-      }
-    .content-about--right {
-        background-color: rgb(87, 87, 87);
-        -webkit-box-flex: 1.4;
-        -webkit-flex: 1.4;
-                flex: 1.3; 
-      }
-   
-    @media only screen and (max-width: 620px) {
+.content-about {
+  margin: 2rem;
+
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+  padding: 70px 50px;
+}
+
+.about-title {
+  font-size: 3em;
+  text-align: center;
+  padding: 50px 0 50px 0;
+  color: #444649;
+  text-decoration: underline;
+}
+
+.about-content {
+  font-size: 20px;
+  padding: 0 20px 0 20px;
+  text-align: justify;
+  line-height: 26px;
+  margin-right: 10px;
+
+}
+
+.content-about--right {
+  background-color: rgb(87, 87, 87);
+  -webkit-box-flex: 1.4;
+  -webkit-flex: 1.4;
+  flex: 1.3;
+}
+
+@media only screen and (max-width: 620px) {
   .about {
     display: -webkit-box;
     display: -webkit-flex;
@@ -45,29 +49,33 @@
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
+    margin-bottom: 50px;
+  }
+
+  .about-title {
+    font-size: 22px;
+    /* padding: 20px 0 10px 10px; */
+    /* margin-left: 10px; */
+    color: #444649;
+    text-align: initial;
+    font-weight: bold;
+
+  }
+
+  .content-about {
     margin: 0;
+    padding: 0;
+    overflow-y: visible;
+    -webkit-overflow-scrolling: touch;
   }
-    .about-title{
-      font-size: 22px;
-      /* padding: 20px 0 10px 10px; */
-      /* margin-left: 10px; */
-      color: #444649;
-      text-align: initial;
-      font-weight: bold;
-      
-    }
-    .content-about{
-      margin: 0;
-      padding: 0;
-      overflow-y: visible;
-      -webkit-overflow-scrolling: touch;
-    }  
-    .content-about--right {
-      display: none;
-    }
+
+  .content-about--right {
+    display: none;
   }
-  @media only screen and (max-width: 780px) {
+}
+
+@media only screen and (max-width: 780px) {
   .about {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -76,10 +84,11 @@
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
-            flex-direction: column;
-    margin: 0;
+    flex-direction: column;
+    margin-bottom: 50px;
   }
-  .about-title{
+
+  .about-title {
     font-size: 22px;
     padding: 20px 0 20px 10px;
     margin-left: 10px;
@@ -87,15 +96,18 @@
     text-align: initial;
     font-weight: bold;
   }
-  .content-about{
+
+  .content-about {
     margin: 0 0 10px 0;
     padding: 0;
     overflow-y: visible;
     -webkit-overflow-scrolling: touch;
-  }  
+  }
+
   .content-about--right {
     display: none;
   }
+
   p {
     padding: 0 20px 10px 10px;
   }
